# TelescopeMCP

./: .gitignore  LICENSE  README.md  pyproject.toml  telescope_mcp_server.py
